--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Kugger's Website
-description: Kugger's Website
+description: A French student that code, sometimes.
 show_downloads: false
