--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-midnight
 title: Kugger's Website
-description: A French student that code, sometimes.
+description: A French student who code, sometimes.
 show_downloads: false
