--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ theme: jekyll-theme-midnight
 title: Kugger's Website
 description: A French student who code, sometimes.
 show_downloads: false
+github:
+  is_project_page: false
