--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-midnight
-title: Kugger's Website
+title: Kugge's Website
 description: A French student who code, sometimes.
 show_downloads: false
 github:
