Set theme jekyll-theme-merlot

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-midnight
+theme: jekyll-theme-merlot
 title: Kugge's Website
 description: A French student who code, sometimes.
 show_downloads: false
