--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-merlot
-title: Kugge's Website
-description: A French student who code, sometimes.
+title: Kugge
+description: Passionate about mathematics and development
 show_downloads: false
 github:
   is_project_page: false
